# voxatlas

./: .env.example  .gitignore  LICENSE  Makefile  README.md  VoxAtlas_Product_Spec.docx  docker-compose.yml  voxatlas-architecture.mermaid  voxatlas-windsurf-prompt.md
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/data/: benchmarks.json  language_metadata.json
backend/app/models/: analytics.py  language.py  transcription.py
backend/app/routers/: analytics.py  insights.py  languages.py  transcription.py
backend/app/services/: asr_service.py  cache_service.py  data_service.py  llama_service.py
backend/tests/: test_analytics.py  test_data_service.py
data/geo/: language_coordinates.json
data/scripts/: enrich_languages.py  generate_benchmarks.py  seed_cache.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: client.ts  insights.ts  languages.ts  transcription.ts
frontend/src/components/charts/: CERBucketDrilldown.tsx  CERByRegion.tsx  CERHistogram.tsx  CERvsHours.tsx  ContinentDistribution.tsx  ExportableChart.tsx  FamilyDistribution.tsx  ModelRadar.tsx  ScriptDistribution.tsx  SummaryCards.tsx  TrainingHoursDistribution.tsx
frontend/src/hooks/: useExport.ts  useLanguages.ts  useTranscription.ts
frontend/src/pages/: Analytics.tsx  Ask.tsx  Benchmarks.tsx  Compare.tsx  Explorer.tsx  Reports.tsx  Transcribe.tsx
frontend/src/styles/: globals.css
frontend/src/utils/: cer.ts  constants.ts  formatters.ts
notebooks/: omniASR_Colab_Demo.ipynb
(+12 files in other folders)
