[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voxatlas-backend"
version = "0.1.0"
description = "VoxAtlas - Low-Resource Language Preservation Dashboard API"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Harris Warren"}]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "aiosqlite>=0.20.0",
    "openai>=1.0.0",
    "datasets>=2.18.0",
    "scipy>=1.12.0",
    "numpy>=1.26.0",
    "editdistance>=0.8.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
gpu = [
    "omnilingual-asr",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
